// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a banner that has basic information 1`] = `
<DemographicsBannerDisplay
  age="24"
  applicationContent={null}
  dateOfBirth={
    Object {
      "ariaLabel": "March 30, 2017",
      "value": "March 30, 2017",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gender="F"
  gestationalAge={null}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Terra Demographics Banner"
  postMenstrualAge={null}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
/>
`;

exports[`renders a blank banner properly 1`] = `
<DemographicsBannerDisplay
  age=""
  applicationContent={null}
  dateOfBirth={Object {}}
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gender=""
  gestationalAge={null}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName=""
  postMenstrualAge={null}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
/>
`;

exports[`renders gestational date with a default label when the label is not provided 1`] = `
<DemographicsBannerDisplay
  age=""
  applicationContent={null}
  dateOfBirth={Object {}}
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gender=""
  gestationalAge="April 5, 2016"
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName=""
  postMenstrualAge={null}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
/>
`;

exports[`renders post menstrural date with a default label when the label is not provided 1`] = `
<DemographicsBannerDisplay
  age=""
  applicationContent={null}
  dateOfBirth={Object {}}
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gender=""
  gestationalAge={null}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName=""
  postMenstrualAge="April 5, 2016"
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
/>
`;

exports[`renders the banner appropriately for a deceased person 1`] = `
<DemographicsBannerDisplay
  age="24"
  applicationContent={null}
  dateOfBirth={
    Object {
      "ariaLabel": "June 15, 2014",
      "value": "June 15, 2014",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={
    Object {
      "ariaLabel": "March 30, 2017",
      "value": "March 30, 2017",
    }
  }
  deceasedDateLabel="Deceased"
  gender="F"
  gestationalAge={null}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Old Terra Demographics Banner"
  postMenstrualAge={null}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
/>
`;

exports[`renders the banner appropriately for a person with gestational and post menstrual dates 1`] = `
<DemographicsBannerDisplay
  age="25 Years"
  applicationContent={
    <span
      className="risk-score"
    >
      5%
    </span>
  }
  dateOfBirth={
    Object {
      "ariaLabel": "May 9, 1993",
      "value": "May 9, 1993",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gender="Male"
  gestationalAge="April 5, 2016"
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  identifiers={
    Array [
      Object {
        "ariaLabel": "MRN 1 2 3 4 5",
        "label": "MRN",
        "value": "12343",
      },
      Object {
        "ariaLabel": "R E A 3JSDA",
        "label": "REA",
        "value": "3JSDA",
      },
    ]
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Johnathon Doe"
  photo=""
  postMenstrualAge="April 7, 2016"
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName="John"
/>
`;

exports[`renders the banner properly for a deceased person with additional application content 1`] = `
<DemographicsBannerDisplay
  age="25 Years"
  applicationContent={
    <span
      className="risk-score"
    >
      5%
    </span>
  }
  dateOfBirth={
    Object {
      "ariaLabel": "May 9, 1993",
      "value": "May 9, 1993",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={
    Object {
      "ariaLabel": "March 5, 2016",
      "value": "March 5, 2016",
    }
  }
  deceasedDateLabel="Deceased"
  gender="Male"
  gestationalAge={null}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  identifiers={
    Array [
      Object {
        "ariaLabel": "MRN 1 2 3 4 5",
        "label": "MRN",
        "value": "12343",
      },
      Object {
        "ariaLabel": "R E A 3JSDA",
        "label": "REA",
        "value": "3JSDA",
      },
    ]
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Johnathon Doe"
  photo=""
  postMenstrualAge={null}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName="John"
/>
`;

exports[`renders the banner that contains additional information 1`] = `
<DemographicsBannerDisplay
  age="25 Years"
  applicationContent={
    <span
      className="risk-score"
    >
      5%
    </span>
  }
  dateOfBirth={
    Object {
      "ariaLabel": "May 9, 1993",
      "value": "May 9, 1993",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gender="Male"
  gestationalAge={null}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  identifiers={
    Array [
      Object {
        "ariaLabel": "MRN 1 2 3 4 5",
        "label": "MRN",
        "value": "12343",
      },
      Object {
        "ariaLabel": "R E A 3JSDA",
        "label": "REA",
        "value": "3JSDA",
      },
    ]
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Johnathon Doe"
  photo=""
  postMenstrualAge={null}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName="John"
/>
`;

exports[`renders the banner with confidential icon 1`] = `
<DemographicsBannerDisplay
  age="25 Years"
  applicationContent={
    <span
      className="risk-score"
    >
      5%
    </span>
  }
  dateOfBirth={
    Object {
      "ariaLabel": "May 9, 1993",
      "value": "May 9, 1993",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gender="Male"
  gestationalAge={null}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  identifiers={
    Array [
      Object {
        "ariaLabel": "MRN 1 2 3 4 5",
        "label": "MRN",
        "value": "12343",
      },
      Object {
        "ariaLabel": "R E A 3JSDA",
        "label": "REA",
        "value": "3JSDA",
      },
    ]
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={true}
  isSelectable={false}
  personName="Johnathon Doe"
  postMenstrualAge={null}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName="John"
/>
`;
